Fix alignment of delete published model button

--- a/ui/src/app/components/upload/upload.component.scss
+++ b/ui/src/app/components/upload/upload.component.scss
@@ -26,6 +26,11 @@ ion-select {
   height: 36px;
 }
 
+.model-name {
+  width: 100%;
+  text-align: left;
+}
+
 .previous-jobs {
   margin-bottom: 40px;
 
